<resources>
    <string name="app_name">Timmo Weather</string>
    <string name="fragment_general">General</string>
    <string name="fragment_forecast">16 Day Forecast</string>

    <string name="fragment_details">Details</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="action_city">Set City</string>

    <string name="nav_extras">Extras</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>

</resources>
